--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,5 @@
 
 group 'useless.apis'
 version '1.0-SNAPSHOT'
+
+apply from: "https://raw.githubusercontent.com/reillylm/useless/master/apis.gradle"
