--- a/build.gradle
+++ b/build.gradle
@@ -2,4 +2,4 @@
 group 'useless.apis'
 version '1.0-SNAPSHOT'
 
-apply from: "../apis.gradle"
+apply from: "https://raw.githubusercontent.com/reillylm/useless/master/apis.gradle"
